--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Numbfish的个人博客
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Numbfish
+language: ch
 timezone: ''
 
 # URL
