update head icon

--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -1,10 +1,10 @@
 #------------------------
 # Header config
-title: theme-kaze demo
-author: theme-kaze
-logo_img: /img/Kaze.png # put the logo on the ${blog_path}/source/img/${picname}.png or use urls
-author_img: /img/Kaze.png
-author_description: designed by theme-kaze
+title: NumbFish's Blog
+author: NumbFish
+logo_img: /img/Head.png # put the logo on the ${blog_path}/source/img/${picname}.png or use urls
+author_img: /img/Head.png
+author_description: designed by NumbFish
 #------------------------
 # Navbar config
 #------------------------
