--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -18,6 +18,7 @@ menus:
 about:
   description: description
   social_links:
+    - { icon: icon-github, link: https://github.com/NumbFish-Luo }
     # - { icon: icon, link: your link }
 
 #------------------------
