--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -90,7 +90,7 @@ scrollUpAnimation: true
 # comment config
 #------------------------
 comment:
-  enable: false
+  enable: true
   type: valine # valine | gitalk | livere | disqus | we recommend valine
   # gitalk config details can see in https://github.com/gitalk/gitalk/blob/master/readme-cn.md
   valine:
@@ -197,6 +197,12 @@ color:
 font:
   font-size: 16px # global font-size
   font-family: '-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue","PingFang SC","Microsoft YaHei",sans-serif' # global font-family
+
+search:
+  enable: true
+  path: search.json
+  field: posts
+  searchContent: false
 
 #------------------------
 # cdn config
