--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,12 @@ author: Numbfish
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
+#------------------------
+# Security https://blog.csdn.net/crazy_scott/article/details/80996427
+#------------------------
+encrypt:
+  enable: true
+
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://example.com
