--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ prismjs:
   preprocess: true
   line_number: true
   tab_replace: ''
+prism:
+  theme: tomorrow
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
