--- a/_config.yml
+++ b/_config.yml
@@ -50,14 +50,17 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: false
-prismjs:
   enable: true
+  auto_detect: false
+  line_number: true
+  tab_replace: ''
+  wrap: true
+  hljs: false
+prismjs:
+  enable: false
   preprocess: true
   line_number: true
   tab_replace: ''
-prism:
-  theme: tomorrow
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
