--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,20 @@ language: zh-CN
 timezone: 'Asia/Shanghai'
 
 #------------------------
+# latex config
+#------------------------
+# choose true to use latex by mathjax or katex
+# warning: latex rendering will put lots of loading burden on page loading
+latex:
+  enable: true
+  engine: katex # mathjax | katex
+  # for better rendering effect, when you choose mathjax, you can use it directly but you will lose some effect
+  # so you can use hexo-renderer-kramed
+  # when you choose katex, you must use hexo-renderer-markdown-it-plus or other render engine
+  global: false
+  # when you choose false, you can use latex by `latex: true` in post front-matter
+
+#------------------------
 # Security https://blog.csdn.net/crazy_scott/article/details/80996427
 #------------------------
 encrypt:
