--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-kaze": "^1.0.5",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "katex": "^0.15.2"
   }
 }
