--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,15 @@ author: Numbfish
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
-#------------------------
-# latex config
-#------------------------
-# choose true to use latex by mathjax or katex
-# warning: latex rendering will put lots of loading burden on page loading
-latex:
-  enable: true
-  engine: katex # mathjax | katex
-  # for better rendering effect, when you choose mathjax, you can use it directly but you will lose some effect
-  # so you can use hexo-renderer-kramed
-  # when you choose katex, you must use hexo-renderer-markdown-it-plus or other render engine
-  global: false
-  # when you choose false, you can use latex by `latex: true` in post front-matter
+math:
+  engine: katex
+  katex:
+    css: https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css
+    js: https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.js
+    config:
+      # KaTeX config
+      throwOnError: false
+      errorColor: "#cc0000"
 
 #------------------------
 # Security https://blog.csdn.net/crazy_scott/article/details/80996427
